@@ -68,13 +68,13 @@ SET(PROJECT_LICENSE_FILE_NAME ${BRANDING_PROJECT_LICENSE_FILE_NAME})
 SET(PROJECT_CHANGELOG_FILE ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}/CHANGELOG)
 SET(DATE_CMD "date")
 SET(DATE_ARGS "+%a %b %d %Y")
-EXECUTE_PROCESS(COMMAND ${DATE_CMD} ${DATE_ARGS} RESULT_VARIABLE CHANGELOG_TIMESTAMP_RESULT OUTPUT_VARIABLE CHANGELOG_TIMESTAMP)  #for rpm package
-IF (NOT "${CHANGELOG_TIMESTAMP}" STREQUAL "")
-  STRING(REPLACE "\n" "" CHANGELOG_TIMESTAMP ${CHANGELOG_TIMESTAMP})
+EXECUTE_PROCESS(COMMAND ${DATE_CMD} ${DATE_ARGS} RESULT_VARIABLE CHANGELOG_TIMESTAMP_RESULT OUTPUT_VARIABLE CHANGELOG_TIMESTAMP_OUTPUT)  #for rpm package
+IF (NOT "${CHANGELOG_TIMESTAMP_OUTPUT}" STREQUAL "")
+  STRING(REPLACE "\n" "" CHANGELOG_TIMESTAMP_OUTPUT ${CHANGELOG_TIMESTAMP_OUTPUT})
 ELSE()
   MESSAGE(WARNING "Failed to get timestamp: ${CHANGELOG_TIMESTAMP_RESULT}")
-ENDIF(NOT "${CHANGELOG_TIMESTAMP}" STREQUAL "")
-FILE(WRITE ${PROJECT_CHANGELOG_FILE} "* ${CHANGELOG_TIMESTAMP} ${PROJECT_MAINTAINER_NAME} <${PROJECT_MAINTAINER_MAIL}>\n")
+ENDIF(NOT "${CHANGELOG_TIMESTAMP_OUTPUT}" STREQUAL "")
+FILE(WRITE ${PROJECT_CHANGELOG_FILE} "* ${CHANGELOG_TIMESTAMP_OUTPUT} ${PROJECT_MAINTAINER_NAME} <${PROJECT_MAINTAINER_MAIL}>\n")
 FILE(READ ${BRANDING_PROJECT_CHANGELOG_FILE} CHANGELOG_TEXT)
 FILE(APPEND ${PROJECT_CHANGELOG_FILE} ${CHANGELOG_TEXT})
 
@@ -148,6 +148,20 @@ MESSAGE(STATUS "BUILD_WITH_UPSCALEDB: ${BUILD_WITH_UPSCALEDB}")
 MESSAGE(STATUS "BUILD_WITH_FORESTDB: ${BUILD_WITH_FORESTDB}")
 
 MESSAGE(STATUS "IS_PUBLIC_BUILD: ${IS_PUBLIC_BUILD}")
+IF(IS_PUBLIC_BUILD)
+  SET(DATE_UTC_ARGS "+%s")
+  EXECUTE_PROCESS(COMMAND ${DATE_CMD} ${DATE_UTC_ARGS} RESULT_VARIABLE UTC_TIMESTAMP_RESULT OUTPUT_VARIABLE UTC_TIMESTAMP_OUTPUT)
+  IF (NOT "${UTC_TIMESTAMP_OUTPUT}" STREQUAL "")
+    STRING(REPLACE "\n" "" UTC_TIMESTAMP_OUTPUT ${UTC_TIMESTAMP_OUTPUT})
+  ELSE()
+    MESSAGE(FATAL "Failed to get timestamp: ${UTC_TIMESTAMP_RESULT}")
+  ENDIF(NOT "${UTC_TIMESTAMP_OUTPUT}" STREQUAL "")
+  SET(EXPIRE_DAYS 30)
+  ADD_DEFINITIONS(-DUTC_TIMESTAMP=${UTC_TIMESTAMP_OUTPUT})
+  ADD_DEFINITIONS(-DEXPIRE_DAYS=${EXPIRE_DAYS})
+  MESSAGE(STATUS "UTC_TIMESTAMP: ${UTC_TIMESTAMP_OUTPUT}, EXPIRE_DAYS: ${EXPIRE_DAYS}")
+ENDIF(IS_PUBLIC_BUILD)
+
 ##################################DEFAULT VALUES##########################################
 # Set the build type.  Options are:
 #  Debug          : w/ debug symbols, w/o optimization
