@@ -2,6 +2,7 @@
 [Alexandr Topilski]
 - Verify private user password
 - UI fixes
+- Is public version now trial
 
 1.12.1 / December 5, 2017
 [Alexandr Topilski]
